[package]
name = "autoconnectcontroller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
glib = { version = "0.19.6", features = ["log"] }
adw = { version = "0.6", package = "libadwaita"}
libspa = "0.8.0"
once_cell = "1.19.0"
pipewire = "0.8.0"
regex = "1.10.4"
state = "0.6.0"
libspa-sys = "0.8.0"
snafu = "0.8.2"
pipewire-sys = "0.8.0"
